@@ -27,10 +27,10 @@
 -->
 
 <title>SunSpider JavaScript Benchmark (In Progress...)</title>
-<link rel="stylesheet" href="../sunspider.css"></link>
+<link rel="stylesheet" href="../sunspider.css">
 </head>
 
-<body onload="next()">
+<body onload="start()">
 
 <h2><span id="logo">&#x2600;</span>SunSpider JavaScript Benchmark <small>(In Progress...)</small></h2>
 <h4>Version: @SUITE@</h4>
